<resources>
    <string name="app_name">My Application</string>

    <string name="title_section1">Calendar Example</string>
    <string name="title_section2">Map Example</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- Calendar -->
    <string name="calendar_header_sun">SUN</string>
    <string name="calendar_header_mon">MON</string>
    <string name="calendar_header_tue">TUE</string>
    <string name="calendar_header_wed">WED</string>
    <string name="calendar_header_thu">THU</string>
    <string name="calendar_header_fri">FRI</string>
    <string name="calendar_header_sat">SAT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_map_api_key" templateMergeStrategy="preserve">AIzaSyC_H7TKaN19w-5_bMQn_NJOlsLpl_A-Mos</string>
</resources>
