<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="@dimen/calendar_control_button_padding"
        android:paddingRight="@dimen/calendar_control_button_padding"
        android:paddingTop="12dp">

        <!-- prev button -->
        <ImageView
            android:id="@+id/calendar_prev_button"
            android:layout_width="@dimen/calendar_control_button_size"
            android:layout_height="@dimen/calendar_control_button_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_navigate_before_black_36dp" />

        <!-- date title -->
        <TextView
            android:id="@+id/calendar_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/calendar_next_button"
            android:layout_toRightOf="@+id/calendar_prev_button"
            android:gravity="center"
            android:text="current date"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#222222" />

        <!-- next button -->
        <ImageView
            android:id="@+id/calendar_next_button"
            android:layout_width="@dimen/calendar_control_button_size"
            android:layout_height="@dimen/calendar_control_button_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_navigate_next_black_36dp" />
    </RelativeLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/calendar_header_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_mon"
            android:textColor="@color/calendar_header_text_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_tue"
            android:textColor="@color/calendar_header_text_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_wed"
            android:textColor="@color/calendar_header_text_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_thu"
            android:textColor="@color/calendar_header_text_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_fri"
            android:textColor="@color/calendar_header_text_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_sat"
            android:textColor="@color/calendar_header_text_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calendar_header_sun"
            android:textColor="@color/calendar_header_text_color" />
    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:horizontalSpacing="1dp"
        android:numColumns="7"
        android:verticalSpacing="1dp" />
</LinearLayout>